New Form Created

--- a/app/views/landing/bishal5.html.erb
+++ b/app/views/landing/bishal5.html.erb
@@ -27,33 +27,47 @@
                         <!-- Title -->
                         <div class="mb-4">
                             <h3 class="text-primary font-weight-bold">Créer un espace de travail</h3>
-                            <p>Veuillez confirmer votre adresse e-mail afin de créer un tout nouvel espace de travail.</p>
+                            <p>Veuillez compléter les champs suivants afin de finaliser la création de votre nouvel espace de travail.</p>
                         </div>
                         <!-- End Title -->
                         
                         <!-- Input -->
                         <div class="js-form-message mb-4">
-                            <label class="h6 small d-block text-uppercase">Nom</label>
                             <div class="js-focus-state input-group u-form">
                                 <input type="text" class="form-control u-form__input" name="nom" required="" placeholder="votre nom" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                                <input type="text" class="form-control u-form__input ml-1" name="prénom" required="" placeholder="votre prénom" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                             </div>
                         </div>
                         <!-- End Input -->
 
                         <!-- Input -->
                         <div class="js-form-message mb-4">
-                            <label class="h6 small d-block text-uppercase">Prénom</label>
                             <div class="js-focus-state input-group u-form">
-                                <input type="text" class="form-control u-form__input" name="prenom" required="" placeholder="votre prénom" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                                <input type="text" class="form-control u-form__input" name="fonction" required="" placeholder="votre fonction" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                             </div>
                         </div>
                         <!-- End Input -->
 
                         <!-- Input -->
                         <div class="js-form-message mb-4">
-                            <label class="h6 small d-block text-uppercase">Email</label>
                             <div class="js-focus-state input-group u-form">
-                                <input type="emaili" class="form-control u-form__input" name="email" required="" placeholder="votre adresse email" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                                <input type="text" class="form-control u-form__input" name="organisme" required="" placeholder="nom de l'organisme" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                            </div>
+                        </div>
+                        <!-- End Input -->
+
+                        <!-- Input -->
+                        <div class="js-form-message mb-4">
+                            <div class="js-focus-state input-group u-form">
+                                <input type="text" class="form-control u-form__input" name="adresse" required="" placeholder="adresse de l'organisme" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                            </div>
+                        </div>
+                        <!-- End Input -->
+                        
+                        <!-- Input -->
+                        <div class="js-form-message mb-4">
+                            <div class="js-focus-state input-group u-form">
+                                <input type="text" class="form-control u-form__input" name="telephone" required="" placeholder="numéro de téléphone" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                             </div>
                         </div>
                         <!-- End Input -->
