Invite Friend page created

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -16,7 +16,7 @@
                         <!-- Button -->
                         <li class="nav-item d-none d-md-inline-block pl-3 pr-0 ml-auto">
                             <a class="btn btn-sm text-primary u-btn-white u-btn-pill transition-3d-hover" href="#" target="_blank">
-                                Vos espaces de travail
+                                votre espace de travail
                             </a>
                         </li>
                         <!-- End Button -->
@@ -40,8 +40,9 @@
             <div class="text-center mb-7">
                 <div class="w-lg-80 mx-auto">
                     <h1 class="text-white display-4 font-size-48--md-down mb-3">Tous vos 
-                        <span class="font-weight-bold">porteurs de projets, 
-                        </span> en un coup d’oeil
+                        <span class="font-weight-bold">porteurs de projet, 
+                        </span> 
+                        <p class="text-white">en un coup d’oeil </p>
                     </h1>
                 </div>
                 <div class="w-md-80 w-lg-60 mx-auto">
@@ -53,7 +54,7 @@
             <!-- Input -->
             <div class="w-md-50 w-lg-40 mx-auto">
                 <form class="js-validate js-form-message">
-                    <a class="btn btn-block text-primary u-btn-white u-btn-pill transition-3d-hover" href="/landing/bishal2" target="_blank">
+                    <a class="btn btn-block text-primary u-btn-white u-btn-pill transition-3d-hover" href="/landing/bishal2">
                         Premiers Pas
                     </a>
                 </form>
@@ -311,8 +312,9 @@
                         <div class="js-slide slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 1110px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1; height: auto;" tabindex="0">
                             <!-- Testimonials -->
                             <div class="w-md-80 w-lg-60 text-center mx-auto">
-                                <blockquote class="h3 mb-5">
-                                    Sur Projets-locaux je gère mes contacts et je découvre en même temps tous les profils disponibles enregistrés dans ma région.
+                                <blockquote class="h5 mb-5">
+                                    Sur Projets-locaux.fr je gère mes contacts et je découvre en même temps tous les profils disponibles enregistrés à 100 km à la ronde. 
+                                    S’ils correspondent à l’un de mes projets, je peux alors prendre contact avec mes partenaires pour être mis en relation.
                                 </blockquote>
                                 <h4 class="h6 text-muted">Thapaliya Bishal, Chargé de Projet Territoire, Boulogne-Billancourt</h4>
                             </div>
