--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -36,7 +36,7 @@
 
         <span class="media-body">
           <h3 class="h5">Créer un espace de travail </h3>
-          <p class="mb-1" style="font-size:0.8rem">Commencer dès à présent à enregistrer vos porteurs de projets locaux</p>  
+          <p class="mb-1 text-justify" style="font-size:0.8rem">Commencer dès à présent à enregistrer vos porteurs de projets locaux</p>  
         </span>
 
         <span class="fa fa-angle-right m-l-10"></span> 
@@ -57,8 +57,8 @@
         </div>
 
         <span class="media-body">
-          <h3 class="h5">Trouver un espace de travail </h3>
-          <p class="mb-1" style="font-size:0.8rem">Affichez les listes de porteurs de projets des autres utilisateurs autour de vous (BGE, CCI, Collectivités territoriales, etc.)</p>  
+          <h3 class="h5">Inviter vos partenaires à créer leur espace </h3>
+          <p class="mb-1 text-justify" style="font-size:0.8rem">Inviter vos partenaires à créer leur espace de travail afin de partager avec vous les profils de porteurs de projets locaux qu’ils ont enregistrés</p>  
         </span>
 
         <span class="fa fa-angle-right m-l-10"></span> 
