--- a/app/views/landing/bishal4.html.erb
+++ b/app/views/landing/bishal4.html.erb
@@ -25,8 +25,8 @@
                 <div class="col-12 mb-5">
                     <!-- Title -->
                     <div class="mb-4">
-                        <h3 class="text-primary font-weight-bold">Trouvez un espace de travail</h3>
-                        <p>Veuillez vous connecter pour que nous puissions vous proposer les autres espaces créés autour de vous.</p>
+                        <h3 class="text-primary font-weight-bold">Accédez à votre espace de travail</h3>
+                        <p>Veuillez vous identifier pour que nous puissions vous proposer les autres espaces créés autour de vous.</p>
                     </div>
                     <!-- End Title -->
 
