--- a/app/views/landing/bishal6.html.erb
+++ b/app/views/landing/bishal6.html.erb
@@ -27,8 +27,8 @@
                         <!-- Title -->
                         <div class="mb-5">
                             <h3 class="text-primary font-weight-bold mb-3">Ajouter un porteur de projet local</h3>
-                            <span class="fa fa-info-circle text-primary font-size-20" data-toggle="tooltip" data-placement="top" title="" data-original-title="You can add some information here as well." aria-describedby="tooltip961465"></span>
-                            <p class="inline">Confidentialité : le nom et les coordonnées de nos porteurs de projet ne seront jamais divulgués sur Projets-locaux.fr.</p>
+                            <span class="fa fa-info-circle text-primary font-size-20" data-toggle="tooltip" data-placement="top" title="" data-original-title="" aria-describedby="tooltip961465"></span>
+                            <p class="inline">Confidentialité : le nom et les coordonnées de vos porteurs de projet ne seront jamais divulgués sur Projets-locaux.fr.</p>
                         </div>
                         <!-- End Title -->
                         
@@ -39,8 +39,8 @@
                                 <!-- Input -->
                                 <div class="js-form-message mb-3">
                                     <div class="js-focus-state input-group u-form">
-                                        <input type="text" class="form-control input-height u-form__input" name="nom" required="" placeholder="nom" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                                         <input type="text" class="form-control input-height u-form__input ml-1" name="prénom" required="" placeholder="prénom" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                                        <input type="text" class="form-control input-height u-form__input" name="nom" required="" placeholder="nom" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                                     </div>
                                 </div>
                                 <!-- End Input -->
@@ -76,14 +76,24 @@
                                         <span class="input-group-text input-group-text-modified u-form__text">K &euro;</span>
                                     </div>
                                 </div>
-                                <!-- End Input --> 
+                                <!-- End Input -->
+
+                               <!-- Profile picture button --> 
+                                <label class="btn btn-sm btn-primary u-btn-primary u-file-attachment-btn mt-3" for="fileAttachmentBtn">
+                                    <span class="fa fa-plus mr-2"></span>
+                                    Profile Picture
+                                    <input id="fileAttachmentBtn" name="file-attachment" type="file" class="u-file-attachment-btn__label">
+                                </label> 
+                                <!-- End profile picture button -->
+                                
                             </div>
                             <!-- End Left inputs -->
 
                             <!-- Right inputs -->
                             <div class="col-sm-6 mb-6">
+                                
                                 <!-- Checkbox -->
-                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-2">
+                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-3">
                                     <input type="checkbox" class="custom-control-input" id="termsCheckbox" name="termsCheckbox" required="" data-msg="Please accept our Terms and Conditions." data-error-class="u-has-error" data-success-class="u-has-success">
                                     <label class="custom-control-label" for="termsCheckbox">
                                         Souhaite créer un commerce
@@ -92,7 +102,7 @@
                                 <!-- End Checkbox -->
 
                                 <!-- Checkbox -->
-                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-2">
+                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-3">
                                     <input type="checkbox" class="custom-control-input" id="termsCheckbox2" name="termsCheckbox2" required="" data-msg="Please accept our Terms and Conditions." data-error-class="u-has-error" data-success-class="u-has-success">
                                     <label class="custom-control-label" for="termsCheckbox2">
                                         Est candidat à la franchise
@@ -101,7 +111,7 @@
                                 <!-- End Checkbox -->
 
                                 <!-- Checkbox -->
-                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-2">
+                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-3">
                                     <input type="checkbox" class="custom-control-input" id="termsCheckbox3" name="termsCheckbox3" required="" data-msg="Please accept our Terms and Conditions." data-error-class="u-has-error" data-success-class="u-has-success">
                                     <label class="custom-control-label" for="termsCheckbox3">
                                         Nécessite un local
@@ -109,10 +119,10 @@
                                 </div>
                                 <!-- End Checkbox -->
 
-                                <hr class="my-2">
+                                <hr class="my-3">
 
                                 <!-- Checkbox -->
-                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-2">
+                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-3">
                                     <input type="checkbox" class="custom-control-input" id="termsCheckbox4" name="termsCheckbox4" required="" data-msg="Please accept our Terms and Conditions." data-error-class="u-has-error" data-success-class="u-has-success">
                                     <label class="custom-control-label" for="termsCheckbox4">
                                         Cède son fond de commerce
@@ -121,7 +131,7 @@
                                 <!-- End Checkbox -->
 
                                 <!-- Checkbox -->
-                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-2">
+                                <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-3">
                                     <input type="checkbox" class="custom-control-input" id="termsCheckbox5" name="termsCheckbox5" required="" data-msg="Please accept our Terms and Conditions." data-error-class="u-has-error" data-success-class="u-has-success">
                                     <label class="custom-control-label" for="termsCheckbox5">
                                         Cède son bail commercial
@@ -130,20 +140,22 @@
                                 <!-- End Checkbox -->
 
                                 <!-- Input -->
-                                <div class="js-focus-state input-group u-form mt-2">
+                                <div class="js-focus-state input-group u-form mt-3">
                                     <p class="text-muted">Horizon du projet</p>
                                     <input type="text" class="form-control input-height u-form__input ml-5" name="horizonProjet" required="" placeholder="YYYY" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                                 </div>
                                 <!-- End Input -->
 
-                                <select class="custom-select input-height mb-2 mt-2" aria-invalid="false">
-                                    <option value="#" selected="">Secteur d'activite</option>
-                                    <option value="#">Recherche & Développement</option>
-                                    <option value="#">IT</option>
-                                    <option value="#">Production</option>
-                                    <option value="#">La gestion</option>
-                                </select>
-                                
+                                <!-- Select -->
+                                <div class="mt-3">
+                                    <select class="selectpicker form-control" multiple data-live-search="true">
+                                        <option value="#">Recherche & Développement</option>
+                                        <option value="#">IT</option>
+                                        <option value="#">Production</option>
+                                        <option value="#">La gestion</option>
+                                    </select>
+                                </div>
+                                <!-- End Select -->
                             </div>
                             <!-- End Rigth inputs -->
 
@@ -158,7 +170,7 @@
 
                         <!-- Textarea -->
                         <div class="form-group shadow-textarea">
-                            <textarea class="form-control resize-none z-depth-1" id="experienceDuPorteur" rows="7" placeholder="Experience du porteur"></textarea>
+                            <textarea class="form-control resize-none z-depth-1" id="experienceDuPorteur" rows="7" placeholder="Expérience du porteur"></textarea>
                         </div>
                         <!-- End Textarea -->
 
@@ -171,16 +183,14 @@
                         </div>
                         <!-- End Input -->
 
-                            <div class="u-tagsinput">
-              <div class="bootstrap-tagsinput"><span class="tag label label-info">HTML5<span data-role="remove"></span></span>         <input type="text" placeholder="" size="5" aria-invalid="false"></div><input type="text" value="HTML5, CSS3, JavaScript, jQuery" data-role="tagsinput" style="display: none;">
-            </div>
-            
-
                         <!-- Checkbox -->
                         <div class="custom-control custom-checkbox d-flex align-items-center text-muted mb-2">
                             <input type="checkbox" class="custom-control-input" id="publierProfil" name="publierProfil" required="" data-msg="Please accept our Terms and Conditions." data-error-class="u-has-error" data-success-class="u-has-success">
                             <label class="custom-control-label" for="publierProfil">
                                 Publier ce profil sur inSiti (recommandé)
+                                <span class="fa fa-info-circle text-primary font-size-20" data-toggle="tooltip" data-placement="top" title="" 
+                                    data-original-title="La publication du profil sur inSiti permet de le rendre visible par les enseignes qui cherchent leurs futurs franchisés locaux. Cela doit se faire avec l’accord expresse du porteur de projet. 
+                                Il va recevoir instantanément par message des codes d’accès afin de pouvoir répondre gratuitement aux enseignes qui le contacteront sur inSiti." aria-describedby="tooltip961465"></span>
                             </label>
                         </div>
                         <!-- End Checkbox -->
