--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -313,8 +313,8 @@
                             <!-- Testimonials -->
                             <div class="w-md-80 w-lg-60 text-center mx-auto">
                                 <blockquote class="h5 mb-5">
-                                    Sur Projets-locaux.fr je gère mes contacts et je découvre en même temps tous les profils disponibles enregistrés à 100 km à la ronde. 
-                                    S’ils correspondent à l’un de mes projets, je peux alors prendre contact avec mes partenaires pour être mis en relation.
+                                    Sur PL, je tiens à jour ma liste d’entrepreneurs locaux et je découvre tous les autres profils enregistrés dans la région. 
+                                    S’ils correspondent à mes projets en cours, je demande leurs coordonnées à mes partenaires.
                                 </blockquote>
                                 <h4 class="h6 text-muted">Thapaliya Bishal, Chargé de Projet Territoire, Boulogne-Billancourt</h4>
                             </div>
@@ -331,7 +331,7 @@
             <div id="testimonialsNavPagination" class="js-slick-carousel u-slick u-slick--pagination-modern u-slick--transform-off mx-auto slick-initialized slick-slider slick-transform-off" data-infinite="true" data-autoplay="true" data-speed="5000" data-focus-on-select="true" data-center-mode="true" data-slides-show="3" data-is-thumbs="true" data-nav-for="#testimonialsNavMain">
                 <div class="slick-list draggable" style="padding: 0px;">
                     <div class="slick-track" style="opacity: 1; width: 201px; transform: translate3d(-201px, 0px, 0px);">
-                        <div class="js-slide slick-slide slick-current slick-center" data-slick-index="0" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
+                        <div class="js-slide ml-9 slick-slide slick-current slick-center" data-slick-index="0" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
                             <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/bishal.jpg') %>" alt="Image Description">
                         </div>
                     </div>
@@ -359,8 +359,5 @@
         </div> 
     </div>
     <!-- End of CTA -->
-
-
-
 </main>
 <!-- End of Main -->
