made corrections to finalize

--- a/app/views/landing/bishal10.html.erb
+++ b/app/views/landing/bishal10.html.erb
@@ -86,7 +86,13 @@
 
                     <!-- Icon Blocks -->
                     <div class="row">
-                        <div class="col-md-6 col-lg-4">
+                        <!-- Title -->
+                        <div class="col-md-12 col-lg-12 mb-3">
+                            <h3 class="h5 mb-0 text-primary">Vous souhaitez avoir plus d'info?</h3>
+                        </div>
+                        <!-- End Title -->
+
+                        <div class="col-md-6 col-lg-4 mt-2">
                             <!-- List -->
                             <ul class="list-unstyled mb-0">
                                 <li class="mb-4">
@@ -101,7 +107,7 @@
                             </ul>
                         </div>
 
-                        <div class="col-md-6 col-lg-4">
+                        <div class="col-md-6 col-lg-4 mt-2">
                             <ul class="list-unstyled mb-0">
                                 <li class="mb-4">
                                     <div class="media">
