--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -58,7 +58,7 @@
 
         <span class="media-body">
           <h3 class="h5">Inviter vos partenaires à créer leur espace </h3>
-          <p class="mb-1 text-justify" style="font-size:0.8rem">Inviter vos partenaires à créer leur espace de travail afin de partager avec vous les profils de porteurs de projets locaux qu’ils ont enregistrés</p>  
+          <p class="mb-1 text-justify" style="font-size:0.8rem">Inviter vos partenaires à créer leur espace de travail afin de partager avec vous les profils de porteurs de projets locaux qu’ils ont enregistré</p>  
         </span>
 
         <span class="fa fa-angle-right m-l-10"></span> 
