--- a/app/views/landing/bishal6.html.erb
+++ b/app/views/landing/bishal6.html.erb
@@ -47,7 +47,7 @@
                                 <!-- Input -->
                                 <div class="js-form-message mb-3">
                                     <div class="js-focus-state input-group u-form">
-                                        <input type="email" class="form-control input-height u-form__input" name="email" required="" placeholder="l'adresse email" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                                        <input type="email" class="form-control input-height u-form__input" name="email" required="" placeholder="adresse email" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                                     </div>
                                 </div>
                                 <!-- End Input -->
@@ -63,7 +63,7 @@
                                 <!-- Input -->
                                 <div class="js-form-message mb-3">
                                     <div class="js-focus-state input-group u-form">
-                                        <input type="text" class="form-control input-height u-form__input" name="adresse" required="" placeholder="adresse" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                                        <input type="text" class="form-control input-height u-form__input" name="adresse" required="" placeholder="ville de résidence" aria-label="jack@walley.com" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                                     </div>
                                 </div>
                                 <!-- End Input -->
@@ -80,7 +80,7 @@
                                <!-- Profile picture button --> 
                                 <label class="btn btn-sm btn-primary u-btn-primary u-file-attachment-btn mt-3" for="fileAttachmentBtn">
                                     <span class="fa fa-plus mr-2"></span>
-                                    Profile Picture
+                                    Photo de profil
                                     <input id="fileAttachmentBtn" name="file-attachment" type="file" class="u-file-attachment-btn__label">
                                 </label> 
                                 <!-- End profile picture button -->
@@ -176,8 +176,8 @@
                         <!-- Input -->
                         <div class="js-form-message mb-4">
                             <div class="js-focus-state input-group u-form">
-                                <textarea class="form-control resize-none z-depth-1" id="franchisesSouhaitee" rows="4" placeholder="Franchises souhaitée"></textarea>
-                                <textarea class="form-control resize-none z-depth-1 ml-3" id="villeImplantation" rows="4" placeholder="Ville d'implantation enrisagées"></textarea>
+                                <textarea class="form-control resize-none z-depth-1" id="franchisesSouhaitee" rows="4" placeholder="Franchises souhaitées"></textarea>
+                                <textarea class="form-control resize-none z-depth-1 ml-3" id="villeImplantation" rows="4" placeholder="Villes d'implantation envisagées"></textarea>
                             </div>
                         </div>
                         <!-- End Input -->
