--- a/app/views/landing/bishal7.html.erb
+++ b/app/views/landing/bishal7.html.erb
@@ -44,7 +44,7 @@
                                 </div>
                                 <div id="FAQOne" class="collapse" aria-labelledby="FAQHeadingOne" data-parent="#FAQCollapse" style="">
                                     <div class="card-body px-4">
-                                        <p class="text-justify">Vos partenaires locaux, que vous connaissez et qui agissent eux-aussi au niveau local auprès des créateurs (ou cédants) de commerces, afin de mutualiser vos ressources.</p>
+                                        <p class="text-justify">Vos partenaires locaux, que vous connaissez et qui agissent eux aussi au niveau local auprès des créateurs (ou cédants) de commerces, afin de mutualiser vos ressources.</p>
                                         <p class="text-justify">Et par exemple, le service commerce de la ville, de l’intercommunalité, la Chambre de commerce, la Chambre des métiers, la BGE - Boutique de gestion des entreprises, les associations de commerçants, Pôle Emploi service création d’entreprise, la plateforme Initiative, les principales banques de réseaux, les principaux cabinets d’expertise comptable, l’Agence de développement, les associations de créateurs, de repreneurs, de financement, etc.</p>
                                     </div>
                                 </div>
