--- a/app/views/landing/bishal8.html.erb
+++ b/app/views/landing/bishal8.html.erb
@@ -85,35 +85,35 @@
                         <li class="selected active">
                           <a role="option" class="dropdown-item selected active" aria-disabled="false" tabindex="0" aria-selected="true">
                             <span class=" bs-ok-default check-mark"></span>
-                            <span class="text">Ma Liste</span>
+                            <span class="text">Ma liste</span>
                           </a>
                         </li>
                         
                         <li>
                           <a role="option" class="dropdown-item" aria-disabled="false" tabindex="0" aria-selected="false">
                             <span class=" bs-ok-default check-mark"></span>
-                            <span class="text">Toutes Le Liste</span>
+                            <span class="text">Toutes les listes</span>
                           </a>
                         </li>
                         
                         <li>
                             <a role="option" class="dropdown-item" aria-disabled="false" tabindex="0" aria-selected="false">
                                 <span class=" bs-ok-default check-mark"></span>
-                                <span class="text">List 1</span>
+                                <span class="text">Liste 1</span>
                             </a>
                         </li>
                         
                         <li>
                             <a role="option" class="dropdown-item" aria-disabled="false" tabindex="0" aria-selected="false">
                                 <span class=" bs-ok-default check-mark"></span>
-                                <span class="text">List 2</span>
+                                <span class="text">Liste 2</span>
                             </a>
                         </li>
 
                         <li>
                             <a role="option" class="dropdown-item" aria-disabled="false" tabindex="0" aria-selected="false">
                                 <span class=" bs-ok-default check-mark"></span>
-                                <span class="text">List 3</span>
+                                <span class="text">Liste 3</span>
                             </a>
                         </li>
                       </ul>
@@ -158,7 +158,7 @@
                         <li>
                           <a role="option" class="dropdown-item" aria-disabled="false" tabindex="0" aria-selected="false">
                             <span class=" bs-ok-default check-mark"></span>
-                            <span class="text">Recherche local</span>
+                            <span class="text">Recherche un local</span>
                           </a>
                         </li>
                       </ul>
@@ -182,7 +182,7 @@
             <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer">   
                 <table class="js-datatable table table-borderless u-datatable__striped u-datatable__content u-datatable__trigger mb-5 dataTable no-footer" data-dt-info="#datatableInfo" data-dt-search="#datatableSearch" data-dt-entries="#datatableEntries" data-dt-page-length="12" data-dt-is-responsive="false" data-dt-is-show-paging="true" data-dt-details-invoker=".js-datatabale-details" data-dt-select-all-control="#invoiceToggleAllCheckbox" data-dt-pagination="datatablePagination" data-dt-pagination-classes="pagination mb-0" data-dt-pagination-items-classes="page-item" data-dt-pagination-links-classes="page-link" data-dt-pagination-next-classes="page-item" data-dt-pagination-next-link-classes="page-link" data-dt-pagination-next-link-markup="<span aria-hidden=&quot;true&quot;>»</span>" data-dt-pagination-prev-classes="page-item" data-dt-pagination-prev-link-classes="page-link" data-dt-pagination-prev-link-markup="<span aria-hidden=&quot;true&quot;>«</span>" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
                     <thead>
-                        <tr class="text-uppercase font-size-10 text-center" role="row">
+                        <tr class="font-size-13 text-center" role="row">
                         <th scope="col" class="sorting_asc" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Checkbox : activate to sort column descending" aria-sort="ascending" style="width: 67px;">
                             <div class="custom-control custom-checkbox d-flex align-items-center">
                             <input type="checkbox" class="custom-control-input" id="invoiceToggleAllCheckbox">
@@ -204,7 +204,7 @@
                         
                         <th scope="col" class="font-weight-bold sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Client : activate to sort column ascending" style="width: 240px;">
                             <div class="d-flex justify-content-between align-items-center">
-                            SECTEUR D’ACTIVITÉ
+                            Secteur d'activité
                             <div class="ml-2">
                                 <span class="fa fa-angle-up u-datatable__thead-icon"></span>
                                 <span class="fa fa-angle-down u-datatable__thead-icon"></span>
@@ -214,31 +214,31 @@
                         
                         <th scope="col" class="font-weight-bold sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Amount : activate to sort column ascending" style="width: 171px;">
                             <div class="d-flex justify-content-between align-items-center">
-                            CRÉATEUR/ CÉDANT
-                            <div class="ml-2">
-                                <span class="fa fa-angle-up u-datatable__thead-icon"></span>
-                                <span class="fa fa-angle-down u-datatable__thead-icon"></span>
-                            </div>
+                                Créateur/ Cédant
+                                <div class="ml-2">
+                                    <span class="fa fa-angle-up u-datatable__thead-icon"></span>
+                                    <span class="fa fa-angle-down u-datatable__thead-icon"></span>
+                                </div>
                             </div>
                         </th>
                         
                         <th scope="col" class="font-weight-bold sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Date : activate to sort column ascending" style="width: 126px;">
                             <div class="d-flex justify-content-between align-items-center">
-                            HORIZON DU PROJET
-                            <div class="ml-2">
-                                <span class="fa fa-angle-up u-datatable__thead-icon"></span>
-                                <span class="fa fa-angle-down u-datatable__thead-icon"></span>
-                            </div>
+                                Horizon
+                                <div class="ml-2">
+                                    <span class="fa fa-angle-up u-datatable__thead-icon"></span>
+                                    <span class="fa fa-angle-down u-datatable__thead-icon"></span>
+                                </div>
                             </div>
                         </th>
                         
                         <th scope="col" class="font-weight-bold sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Status : activate to sort column ascending" style="width: 157px;">
                             <div class="d-flex justify-content-between align-items-center">
-                            DATE DE MISE À JOUR
-                            <div class="ml-2">
-                                <span class="fa fa-angle-up u-datatable__thead-icon"></span>
-                                <span class="fa fa-angle-down u-datatable__thead-icon"></span>
-                            </div>
+                                Mise à jour
+                                <div class="ml-2">
+                                    <span class="fa fa-angle-up u-datatable__thead-icon"></span>
+                                    <span class="fa fa-angle-down u-datatable__thead-icon"></span>
+                                </div>
                             </div>
                         </th>
 
